--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/vector-icons": "^6.3.1",
     "expo": "^27.0.1",
     "firebase": "^5.0.4",
     "prop-types": "^15.6.1",
     "react": "16.3.1",
-    "react-native": "~0.55.2",
+    "react-native": "^0.55.4",
+    "react-native-maps": "^0.21.0",
     "react-navigation": "^2.2.3",
+    "react-navigation-redux-helpers": "^1.1.2",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0"
   }
