--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@expo/vector-icons": "^6.3.1",
     "expo": "^27.0.1",
     "firebase": "^5.0.4",
+    "native-base": "^2.5.2",
     "prop-types": "^15.6.1",
     "react": "16.3.1",
     "react-native": "^0.55.4",
