--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "react-navigation": "^2.2.3",
     "react-navigation-redux-helpers": "^1.1.2",
     "react-redux": "^5.0.7",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "redux-form": "^7.4.2",
+    "redux-thunk": "^2.3.0"
   }
 }
