--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "babel-eslint": "^8.2.3",
+    "babel-eslint": "^8.2.6",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.9.1",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-react-native": "^3.2.1",
     "jest-expo": "~27.0.0",
     "react-native-scripts": "1.14.0",
@@ -27,14 +27,15 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^6.3.1",
-    "expo": "^27.0.1",
-    "firebase": "^5.0.4",
-    "native-base": "^2.5.2",
-    "prop-types": "^15.6.1",
+    "expo": "^27.1.1",
+    "firebase": "^5.4.2",
+    "native-base": "^2.8.0",
+    "prop-types": "^15.6.2",
+    "pusher-js": "^4.3.0",
     "react": "16.3.1",
     "react-native": "^0.55.4",
     "react-native-maps": "^0.21.0",
-    "react-navigation": "^2.2.3",
+    "react-navigation": "^2.12.1",
     "react-navigation-redux-helpers": "^1.1.2",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
